<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfe2f3"
    tools:context=".ui.NewTextFragment">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Text Settings"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/text_date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <Button
        android:id="@+id/button_pick_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B2EEF1"
        android:text="Pick Contact"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_new_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_title"
        app:layout_constraintBottom_toTopOf="@id/text_phone_input"/>
    <Button
        android:id="@+id/button_new_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B2EEF1"
        android:text="New Number"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_pick_contact"
        app:layout_constraintBottom_toTopOf="@id/text_phone_input"
        app:layout_constraintTop_toBottomOf="@id/textview_title" />

    <EditText
        android:id="@+id/text_phone_input"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:hint="Phone Number"
        android:inputType="phone"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@id/text_date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_new_number" />

    <EditText
        android:id="@+id/text_date_input"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:hint="Date (mm/dd/yy)"
        android:inputType="date"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@id/text_time_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_phone_input" />

    <EditText
        android:id="@+id/text_time_input"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:hint="Time (hh:mm)"
        android:inputType="time"
        android:minHeight="50dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/text_message_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_date_input" />

    <EditText
        android:id="@+id/text_message_input"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:hint="Message"
        android:minHeight="70dp"
        android:inputType="textLongMessage"
        android:background="#DFDFDF"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_time_input" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF8112"
        android:text="Submit"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_existing"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_message_input" />

    <Button
        android:id="@+id/button_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CEC3B9"
        android:text="Pending Texts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@id/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_message_input"/>

</androidx.constraintlayout.widget.ConstraintLayout>